h1. CHANGELOG

h3. 1.0.6 February 13, 2014

* add OmniAuth navigation links

h3. 1.0.5 January 16, 2014

* Modernizr must be loaded before Foundation

h3. 1.0.4 January 16, 2014

* Foundation 5.0.3 is now compatible with Rails Turbolinks and the asset pipeline

h3. 1.0.3 January 11, 2014

* add missing 'autofocus' to Devise views

h3. 1.0.2 January 11, 2014

* don't include a custom 'name' field in the Devise views (fixes issue #12)

h3. 1.0.1 January 9, 2014

* generate Devise views (new account, edit account, forgot password)

h3. 1.0.0 January 9, 2014

* generate Devise views (login view)
* change generator commands (described in README)
* Haml Foundation 5 topbar syntax correction (fixes #11) (contributed by i5okie)

h3. 0.5.11 January 5, 2014

* fix Devise navigation links (when there is no 'has_role?' for authorization)

h3. 0.5.10 January 1, 2014

* add Devise navigation links for Haml or Slim (contributed by Brad Carson)
* fix formatting of flash message alert box for Slim (contributed by Brad Carson)

h3. 0.5.9 December 26, 2013

* fix error in slim templates for doctype (contributed by ayamomiji)

h3. 0.5.8 December 15, 2013

* remove 'app/views/layouts/application.html.erb' file before creating a new one
* fix error in slim templates for 'app_name.underscore.titleize'

h3. 0.5.7 December 15, 2013

* add Slim templates (contributed by benedictleejh)
* change all references from 'Twitter Bootstrap' to 'Bootstrap'

h3. 0.5.6 November 23, 2013

* minor tweak for Zurb Foundation

h3. 0.5.5 November 22, 2013

* fixes for Zurb Foundation 5.0

h3. 0.5.4 November 22, 2013

* support for Zurb Foundation 5.0

h3. 0.5.3 November 18, 2013

* better comments

h3. 0.5.2 November 18, 2013

* fix mixin names

h3. 0.5.1 November 18, 2013

* make it clear that the mixins are just examples

h3. 0.5.0 November 11, 2013

* use mixins for uniform layout across frameworks

h3. 0.4.2 November 9, 2013

* move 'Home' link to conform to framework examples