@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.6"
+  VERSION = "1.0.7"
 end
